--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -572,6 +572,7 @@ section#icon-wrapper-mobile {
     .rox-dropdown {
         position: relative;
     }
+
     .rox-dropdown-menu {
         position: absolute;
         visibility: hidden;
@@ -595,6 +596,7 @@ section#icon-wrapper-mobile {
         border-top-right-radius: 0;
         border-top: 1px solid #bbaeae21;
     }
+
     .rox-dropdown .rox-dropdown-menu>li>a {
         display: block;
         color: #3a3a3a;
@@ -602,32 +604,40 @@ section#icon-wrapper-mobile {
         border-bottom: 1px solid rgba(238, 238, 238, 0.05);
         text-align: left;
     }
+
     .rox-dropdown .rox-dropdown-menu>li:last-child>a {
         border: 0;
     }
+
     .rox-header-menu .nav li ul .rox-dropdown-menu {
         left: 100%;
     }
+
     .rox-header-menu .nav li ul .rox-dropdown .rox-dropdown-menu {
         -webkit-transition: all .3s linear;
         transition: all .3s linear;
         top: 30%;
     }
+
     .rox-header-menu .nav li ul li.rox-dropdown:hover .rox-dropdown-menu {
         top: 0%;
     }
+
     .rox-dropdown:hover>.rox-dropdown-menu {
         visibility: visible;
         -webkit-opacity: 1;
         opacity: 1;
         top: 100%;
     }
+
     .rox-dropdown .rox-dropdown-menu>li>a:hover {
         color: #87C3FF;
     }
+
     .header-sticky.sticky .rox-header-menu .nav>.rox-dropdown:after {
         bottom: 10px;
     }
+
     .logo {
         max-width: 172px;
     }
@@ -1162,6 +1172,9 @@ li#signInIdIcon {
     -webkit-align-items: center;
     -ms-flex-align: center;
     align-items: center;
+    background-size: cover !important;
+    background-repeat: no-repeat !important;
+    background-position: left !important;
 }
 
 .bg-img {
@@ -1791,6 +1804,7 @@ section.linked-area.section-padding.buy-ticket-overlay.magic-overlay.magic-pictu
     0% {
         transform: rotate(0deg);
     }
+
     100% {
         transform: rotate(360deg);
     }
@@ -2022,6 +2036,7 @@ section.linked-area.section-padding.buy-ticket-overlay.magic-overlay.magic-pictu
         left: 0;
         top: 0;
     }
+
     to {
         transform: scale(1.10);
     }
@@ -2484,11 +2499,13 @@ a.hotel-icon i {
         -webkit-opacity: 1;
         opacity: 1;
     }
+
     50% {
         right: 30px;
         -webkit-opacity: .5;
         opacity: .5;
     }
+
     to {
         right: 40px;
         -webkit-opacity: .8;
@@ -4227,10 +4244,12 @@ button.atlantis-book-now-btn.btn {
 ========================================================================================*/
 
 @media only screen and (min-width: 1920px) and (max-width: 2200px) {
+
     /* atlantis page*/
     .atlantis-room-suites:after {
         top: 60%;
     }
+
     .fantasy-feature-shape:after {
         bottom: -156px;
         left: 20px;
@@ -4238,10 +4257,12 @@ button.atlantis-book-now-btn.btn {
 }
 
 @media only screen and (min-width: 1200px) and (max-width: 1300px) {
+
     /* atlantis page */
     .atlantis-room-suites:after {
         display: none;
     }
+
     .atlantis-bd-price {
         font-size: 30px;
         line-height: 42px;
@@ -4249,137 +4270,175 @@ button.atlantis-book-now-btn.btn {
 }
 
 @media only screen and (min-width: 992px) and (max-width: 1199px) {
+
     /* atlantis page */
     .atlantis-room-thumb {
         margin-bottom: 21px;
         height: 100px;
     }
+
     button.atlantis-book-now-btn.btn {
         padding: 10px 10px;
     }
+
     .atlantis-room-suites {
         padding-top: 40px;
     }
+
     .atlantis-bd-price {
         font-size: 25px;
         line-height: 38px;
     }
+
     .atlantis-room-suites:after {
         display: none;
     }
+
     .calender-date-checking {
         width: 100%;
     }
+
     .atlantis-single-search-content {
         margin-bottom: 20px;
     }
+
     .number-guest {
         width: 50%;
     }
+
     .number-room {
         width: 50%;
     }
+
     .check-in-out-date-content:after {
         display: none;
     }
+
     .single-date-checking {
         width: calc(50% - 12px);
     }
+
     .atlantis-breadcrumb-area {
         padding-bottom: 300px;
     }
 }
 
 @media only screen and (min-width: 768px) and (max-width: 991px) {
+
     /* atlantis page */
     div#featured_img {
         margin-bottom: 30px;
     }
+
     .atlantis-bd-price {
         font-size: 20px;
         line-height: 32px;
     }
+
     button.atlantis-book-now-btn.btn {
         padding: 10px 10px;
     }
+
     .atlantis-free-collection {
         font-weight: 700;
         font-size: 14px;
     }
+
     .atlantis-room-suites:after {
         display: none;
     }
+
     .calender-date-checking {
         width: 100%;
     }
+
     .calender-date-checking {
         width: 100%;
         margin-bottom: 21px;
     }
+
     .check-in-out-date-content:after {
         display: none;
     }
+
     .number-guest {
         width: 50%;
     }
+
     .number-room {
         width: 50%;
     }
+
     .breadcrum-area {
         padding-bottom: 400px;
     }
 }
 
 @media only screen and (min-width: 320px) and (max-width: 767px) {
+
     /* atlantis page */
     .atlantis-room-large-img>img {
         margin-bottom: 20px;
     }
+
     .atlantis-room-thumb {
         margin: auto;
         text-align: center;
         margin-bottom: 22px;
     }
+
     .single-room-feature ul li {
         width: 100%;
     }
+
     .room-suite-inner-content-area>h3 {
         font-size: 20px;
     }
+
     .atlantis-bd-price {
         font-size: 18px;
         line-height: 30px;
     }
+
     .atlantis-booking-ticket-area {
         margin-top: 30px;
     }
+
     .atlantis-address-content-wrapper {
         display: block;
     }
+
     .atlantis-contact-address-area {
         margin-bottom: 20px;
     }
+
     button.atlantis-book-now-btn.btn {
         padding: 10px 9px;
     }
+
     .atlantis-room-suites:after {
         display: none;
     }
+
     .calender-date-checking,
     .number-guest,
     .number-room {
         width: 100%;
     }
+
     .atlantis-single-search-content {
         margin-bottom: 18px;
     }
+
     .atlantis-search-area {
         padding: 30px 15px;
     }
+
     .check-in-out-date-content:after,
     .atlantis-search-room:before {
         display: none;
     }
+
     .atlantis-breadcrumb-area {
         padding-bottom: 450px;
     }
@@ -4978,7 +5037,7 @@ figure:hover img {
 .ReactModal__Content.ReactModal__Content--after-open {
     position: absolute;
     top: 50% !important;
-    left: 50%;
+    left: 50% !important;
     right: auto;
     bottom: auto;
     border: none;
@@ -4992,4 +5051,19 @@ figure:hover img {
     transform: translate(-50%, -50%);
     color: rgb(0, 0, 0);
     z-index: 9999999999999 !important;
+}
+
+.st0 {
+    fill: #F9F9F9;
+}
+
+.st1 {
+    fill: none;
+    stroke: #E50019;
+    stroke-width: 4;
+    stroke-linejoin: round;
+}
+
+.st2 {
+    fill: #E50019;
 }
