--- a/public/assets/css/responsive.css
+++ b/public/assets/css/responsive.css
@@ -1625,6 +1625,14 @@
                     font-size: 25px;
                     line-height: 38px;
                 }
+
+                .mobile-section {
+                    display: block;
+                }
+
+                .desktop-section {
+                    display: none;
+                }
             }
 
             /* Small Device : 480px. */
@@ -2178,10 +2186,11 @@
                 .hero-single-slide {
                     position: relative;
                     top: 90px !important;
-                    height: 270px !important;
+                    height: 380px !important;
                 }
+
                 .hero-slider-item {
-                    background-size: contain !important;
+                    background-size: cover !important;
                     position: absolute !important;
                     height: 100% !important;
                     background-repeat: no-repeat !IMPORTANT;
@@ -2189,22 +2198,27 @@
                     background-position: top !important;
                     width: 100%;
                 }
+
                 h1.slide-title {
                     font-size: 21px;
                     line-height: 38px;
                     margin-top: 35px;
                     margin-bottom: 0 !important;
                 }
-                .hero-slider-content p{
+
+                .hero-slider-content p {
                     margin-top: 0 !important;
                 }
-                .slider-bottom-linked{
+
+                .slider-bottom-linked {
                     margin-top: 0 !important;
                 }
-                .nice-select.fantasy-nice-select{
+
+                .nice-select.fantasy-nice-select {
                     max-width: auto !important;
                 }
             }
+
             @media only screen and (min-width: 480px) and (max-width: 575px) {
                 .hero-single-slide {
                     position: relative;
@@ -2212,12 +2226,14 @@
                     height: 360px !important;
                 }
             }
+
             @media only screen and (min-width: 575px) and (max-width: 767px) {
                 .hero-single-slide {
                     position: relative;
                     top: 90px !important;
                     height: 360px !important;
                 }
+
                 .hero-slider-item {
                     background-size: contain !important;
                     position: absolute !important;
@@ -2227,19 +2243,23 @@
                     background-position: top !important;
                     width: 100%;
                 }
+
                 h1.slide-title {
                     font-size: 21px;
                     line-height: 38px;
                     margin-top: 35px;
                     margin-bottom: 0 !important;
                 }
-                .hero-slider-content p{
+
+                .hero-slider-content p {
                     margin-top: 0 !important;
                 }
-                .slider-bottom-linked{
+
+                .slider-bottom-linked {
                     margin-top: 0 !important;
                 }
             }
+
             @media only screen and (min-width: 600px) and (max-width: 767px) {
                 .hero-single-slide {
                     position: relative;
@@ -2254,6 +2274,7 @@
                     top: 90px !important;
                     height: 522px !important;
                 }
+
                 .hero-slider-item {
                     background-size: contain !important;
                     position: absolute !important;
@@ -2263,15 +2284,15 @@
                     background-position: top !important;
                     width: 100%;
                 }
+
                 h1.slide-title {
                     font-size: 21px;
                     line-height: 38px;
                     margin-top: 35px;
                     margin-bottom: 0 !important;
                 }
-                .hero-slider-content p{
+
+                .hero-slider-content p {
                     margin-top: 0 !important;
                 }
             }
-
-
